--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -7,12 +7,22 @@
     "editable": true
    },
    "source": [
+    "# Chapter 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "BA1A: Compute the Number of Times a Pattern Appears in a Text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -88,15 +98,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "BA1C: Find the Reverse Complement of a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCGGGTTTT\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverseComplement(DNA):\n",
+    "    DNA = DNA[::-1]\n",
+    "    reverse = []\n",
+    "    for neucleotide in DNA:\n",
+    "        if neucleotide == 'A':\n",
+    "            reverse.append(\"T\")\n",
+    "        elif neucleotide == 'T':\n",
+    "            reverse.append('A')\n",
+    "        elif neucleotide == 'C':\n",
+    "            reverse.append('G')\n",
+    "        elif neucleotide == 'G':\n",
+    "            reverse.append('C')\n",
+    "    print ''.join(reverse)\n",
+    "reverseComplement(\"AAAACCCGGT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1D: Find All Occurrences of a Pattern in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def PatternMatching(Genome, Pattern):\n",
+    "    for i in range(len(Genome)-len(Pattern)+1):\n",
+    "        if Genome[i:i+len(Pattern)] == Pattern:\n",
+    "            print i,\n",
+    "    \n",
+    "PatternMatching(\"GATATATGCATATACTT\", \"ATAT\")"
+   ]
   }
  ],
  "metadata": {
