--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -177,6 +177,141 @@
     "    \n",
     "PatternMatching(\"GATATATGCATATACTT\", \"ATAT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1E: Find Patterns Forming Clumps in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CGACA GAAGA AATGT\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clumpFinding( s, k, L, t ):\n",
+    "    out = []\n",
+    "    for start in range(len(s)-L+1):\n",
+    "        window = s[start:start+L]\n",
+    "        counts = {}\n",
+    "        for i in range(len(window)-k+1):\n",
+    "            if window[i:i+k] not in counts:\n",
+    "                counts[window[i:i+k]] = 0\n",
+    "            counts[window[i:i+k]] += 1\n",
+    "        for kmer in counts:\n",
+    "            if counts[kmer] >= t and kmer not in out:\n",
+    "                out.append(kmer)\n",
+    "    print ' '.join(out)\n",
+    "\n",
+    "clumpFinding(\"CGGACTCGACAGATGTGAAGAAATGTGAAGACTGAGTGAAGAGAAGAGGAAACACGACACGACATTGCGACATAATGTACGAATGTAATGTGCCTATGGC\",5,75,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1F: Find a Position in a Genome Minimizing the Skew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53 97\n"
+     ]
+    }
+   ],
+   "source": [
+    "def minSkew(DNA):\n",
+    "    minimum = 10000\n",
+    "    position = [0]\n",
+    "    gCount = 0\n",
+    "    cCount = 0\n",
+    "    for i in range (len(DNA)):\n",
+    "        if DNA[i] == 'G':\n",
+    "            gCount = gCount + 1\n",
+    "        elif DNA[i] == 'C':\n",
+    "            cCount = cCount + 1\n",
+    "        position.append(gCount-cCount)\n",
+    "    gCount = 0\n",
+    "    cCount = 0\n",
+    "    for i in range (len(DNA)):\n",
+    "        if DNA[i] == 'G':\n",
+    "            gCount = gCount + 1\n",
+    "        elif DNA[i] == 'C':\n",
+    "            cCount = cCount + 1\n",
+    "        if gCount-cCount == min(position):\n",
+    "            print(i+1),\n",
+    "\n",
+    "minSkew('CCTATCGGTGGATTAGCATGTCCCTGTACGTTTCGCCGCGAACTAGTTCACACGGCTTGATGGCAAATGGTTTTTCCGGCGACCGTAATCGTCCACCGAG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1G: Compute the Hamming Distance Between Two Strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hammingDistance(seq1, seq2):\n",
+    "    difference = 0\n",
+    "    for ch1, ch2 in zip(seq1, seq2):\n",
+    "        if ch1 != ch2:\n",
+    "            difference += 1\n",
+    "    print difference\n",
+    "\n",
+    "hammingDistance('GGGCCGTTGGT', 'GGACCGTTGAC')"
+   ]
   }
  ],
  "metadata": {
