--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -312,6 +312,90 @@
     "\n",
     "hammingDistance('GGGCCGTTGGT', 'GGACCGTTGAC')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA1H: Find All Approximate Occurrences of a Pattern in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 7 26 27 78\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hammingDistance(seq1, seq2):\n",
+    "    difference = 0\n",
+    "    for ch1, ch2 in zip(seq1, seq2):\n",
+    "        if ch1 != ch2:\n",
+    "            difference += 1\n",
+    "    return difference\n",
+    "\n",
+    "def findPosition(Pattern, Genome, d):\n",
+    "    for i in range(len(Genome)-len(Pattern)):\n",
+    "        window = Genome[i:i+len(Pattern)]\n",
+    "        if(hammingDistance(window, Pattern) <= d):\n",
+    "            print i,\n",
+    "        \n",
+    "findPosition(\"ATTCTGGA\", \"CGCCCGAATCCAGAACGCATTCCCATATTTCGGGACCACTGGCCTCCACGGTACGGACGTCAATCAAATGCCTAGCGGCTTGTGGTTTCTCCTACGCTCC\", 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA1I: Find the Most Frequent Words with Mismatches in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT AGAG ATGA ATGA ATGA ATGA ATGC ATGT CATG CATG CATG CATG CATG CATG CATG CATG CATG CGCA CGTT GAGA GAGC GATG GCAT GCAT GCAT GCAT GCAT GCAT GCAT GCAT GCAT GTCG GTTG TCGC TGAG TGAT TGCA TGCA TGCA TGCA TGTC TTGC\n"
+     ]
+    }
+   ],
+   "source": [
+    "#হয়নাই\n",
+    "def hammingDistance(seq1, seq2):\n",
+    "    difference = 0\n",
+    "    for ch1, ch2 in zip(seq1, seq2):\n",
+    "        if ch1 != ch2:\n",
+    "            difference += 1\n",
+    "    return difference\n",
+    "\n",
+    "def findKMer(Genome, k, d):\n",
+    "    freqKmer = []\n",
+    "    for i in range(len(Genome)-k):\n",
+    "        kmer = Genome[i:i+k]\n",
+    "        for j in range(len(Genome) - k):\n",
+    "            window = Genome[j:j+k]\n",
+    "            if(hammingDistance(kmer,window)<d):\n",
+    "                freqKmer.append(kmer)\n",
+    "    freqKmer.sort()\n",
+    "    print ' '.join(freqKmer)\n",
+    "    \n",
+    "findKMer(\"ACGTTGCATGTCGCATGATGCATGAGAGCT\", 4, 1)"
+   ]
   }
  ],
  "metadata": {
