--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -315,16 +315,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA1H: Find All Approximate Occurrences of a Pattern in a String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -354,28 +359,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA1I: Find the Most Frequent Words with Mismatches in a String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACGT AGAG ATGA ATGA ATGA ATGA ATGC ATGT CATG CATG CATG CATG CATG CATG CATG CATG CATG CGCA CGTT GAGA GAGC GATG GCAT GCAT GCAT GCAT GCAT GCAT GCAT GCAT GCAT GTCG GTTG TCGC TGAG TGAT TGCA TGCA TGCA TGCA TGTC TTGC\n"
+      "ATGC ATGT GATG\n"
      ]
     }
    ],
    "source": [
-    "#হয়নাই\n",
+    "#Still Needs Clarification : https://gist.github.com/alec-djinn/9018370\n",
+    "from collections import OrderedDict\n",
+    "from operator import itemgetter\n",
+    "\n",
     "def hammingDistance(seq1, seq2):\n",
     "    difference = 0\n",
     "    for ch1, ch2 in zip(seq1, seq2):\n",
@@ -384,17 +397,41 @@
     "    return difference\n",
     "\n",
     "def findKMer(Genome, k, d):\n",
-    "    freqKmer = []\n",
-    "    for i in range(len(Genome)-k):\n",
+    "    kmer_dict = {}\n",
+    "    for i in range(len(Genome)-k+1):\n",
     "        kmer = Genome[i:i+k]\n",
-    "        for j in range(len(Genome) - k):\n",
-    "            window = Genome[j:j+k]\n",
-    "            if(hammingDistance(kmer,window)<d):\n",
-    "                freqKmer.append(kmer)\n",
-    "    freqKmer.sort()\n",
-    "    print ' '.join(freqKmer)\n",
+    "        if kmer not in kmer_dict:\n",
+    "            kmer_dict[kmer] = 1\n",
+    "        else:\n",
+    "            kmer_dict[kmer] += 1\n",
+    "    kmer_dict_with_mismatches = {}\n",
+    "    for kmer in kmer_dict:\n",
+    "        kmer_dict_with_mismatches.update({kmer:[]})\n",
+    "        for other_kmer in kmer_dict:\n",
+    "            mismatches = hammingDistance(kmer,other_kmer)\n",
+    "            if mismatches <= d:\n",
+    "                kmer_dict_with_mismatches[kmer].append([other_kmer,kmer_dict[other_kmer]])\n",
+    "    tmp = {}\n",
+    "    for item in kmer_dict_with_mismatches:\n",
+    "        count = 0\n",
+    "        for motif in kmer_dict_with_mismatches[item]:\n",
+    "            count += motif[-1]\n",
+    "        tmp.update({item:count})\n",
     "    \n",
-    "findKMer(\"ACGTTGCATGTCGCATGATGCATGAGAGCT\", 4, 1)"
+    "    result = OrderedDict(sorted(tmp.items(), key=itemgetter(1), reverse=True))\n",
+    "    \n",
+    "    commons = OrderedDict()\n",
+    "    _max = result.items()[0][1]\n",
+    "    for item in result:\n",
+    "        if result[item] == _max:\n",
+    "            commons.update({item:result[item]})\n",
+    "        else:\n",
+    "            return commons\n",
+    "    return result\n",
+    "    \n",
+    "result = findKMer(\"ACGTTGCATGTCGCATGATGCATGAGAGCT\", 4, 1)\n",
+    "for kmer in result:\n",
+    "    print kmer,"
    ]
   }
  ],
