--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -433,6 +433,67 @@
     "for kmer in result:\n",
     "    print kmer,"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA1J: Find Frequent Words with Mismatches and Reverse Complements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA1K: Generate the Frequency Array of a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1 0 0 0 0 2 2 1 2 1 0 0 1 1 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def getFrequencyArray(k):\n",
+    "    x = itertools.product(['A','C','G','T'],repeat=2)\n",
+    "    combinations = []\n",
+    "    for i in x:\n",
+    "        combinations.append(''.join(i))\n",
+    "    return combinations\n",
+    "\n",
+    "def getFrequency(Genome, k):\n",
+    "    freqarr = getFrequencyArray(k)\n",
+    "    for i in freqarr:\n",
+    "        count = 0\n",
+    "        for j in range(len(Genome)-k+1):\n",
+    "            window = Genome[j:j+k]\n",
+    "            if i == window:\n",
+    "                count = count+1\n",
+    "        print count,\n",
+    "\n",
+    "getFrequency(\"ACGCGGCTCTGAAA\", 2)"
+   ]
   }
  ],
  "metadata": {
