--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -39,7 +39,6 @@
    ],
    "source": [
     "def PatternCount(Text, Pattern):\n",
-    "    #Set the number of\n",
     "    count = 0\n",
     "    length = len(Pattern)\n",
     "    for i in range (len(Text)):\n",
@@ -436,7 +435,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA1J: Find Frequent Words with Mismatches and Reverse Complements"
    ]
@@ -445,23 +447,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA1K: Generate the Frequency Array of a String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -494,6 +503,68 @@
     "\n",
     "getFrequency(\"ACGCGGCTCTGAAA\", 2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1L: Implement PatternToNumber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem solved using recursion\n",
+    "\n",
+    "dna = {'A':0 ,'C':1,'G':2,'T':3}\n",
+    "def PatternToNumber(pattern):\n",
+    "    if len(pattern)==0:\n",
+    "        return 0\n",
+    "    sym = pattern[len(pattern)-1] #T G A\n",
+    "    pref = pattern[:len(pattern)-1] #AG A _ \n",
+    "    return 4*PatternToNumber(pref)+dna[sym] #4*2+3 4*0+2 4*0+0\n",
+    "\n",
+    "print PatternToNumber(\"AGT\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA1M: Implement NumberToPattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
