--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -565,6 +565,22 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA1N: Generate the d-Neighborhood of a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
