Last Problem of Chapter 1 Done

--- a/Chapter 1 Assignment.ipynb
+++ b/Chapter 1 Assignment.ipynb
@@ -568,19 +568,61 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA1N: Generate the d-Neighborhood of a String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAG\n",
+      "ATG\n",
+      "AGG\n",
+      "ACA\n",
+      "ACT\n",
+      "ACG\n",
+      "ACC\n",
+      "TCG\n",
+      "GCG\n",
+      "CCG\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "def hammingDistance(seq1, seq2):\n",
+    "    difference = 0\n",
+    "    for ch1, ch2 in zip(seq1, seq2):\n",
+    "        if ch1 != ch2:\n",
+    "            difference += 1\n",
+    "    return difference\n",
+    "\n",
+    "def dNeighbour(Pattern, d):\n",
+    "    bases=['A','T','G','C']\n",
+    "    combinations = [''.join(p) for p in itertools.product(bases, repeat=len(Pattern))];\n",
+    "    result = []\n",
+    "    for i in combinations:\n",
+    "        if(hammingDistance(Pattern, i) <= d):\n",
+    "            result.append(i)\n",
+    "    for j in result:\n",
+    "        print j\n",
+    "\n",
+    "dNeighbour(\"ACG\", 1)"
+   ]
   }
  ],
  "metadata": {
