Chapter 2 যা পারসি করসি

--- a/Chapter 2 Assignment.ipynb
+++ b/Chapter 2 Assignment.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Chapter 2"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2A: Implement MotifEnumeration"
    ]
@@ -18,14 +24,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2B: Find a Median String"
    ]
@@ -34,7 +45,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -86,7 +99,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2C: Find a Profile-most Probable k-mer in a String"
    ]
@@ -95,7 +111,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -146,6 +164,145 @@
     "    [0.1, 0.2, 0.1, 0.1, 0.2]\n",
     "]\n",
     "ProfileMostProbableKmer(DNA, k, profile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "BA2D: Implement GreedyMotifSearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['GGC', 'GCG', 'CGT', 'GTT', 'TTC', 'TCA', 'CAG', 'AGG', 'GGC', 'GCA', 'CA', 'A']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Incomplete\n",
+    "#Implementing http://www.mrgraeme.co.uk/greedy-motif-search/\n",
+    "def GreedyMotifSearch(DNA, k , t):\n",
+    "    bestMotifs = []\n",
+    "    for i in range(t):\n",
+    "        bestMotifs.append(DNA[i][0:k])\n",
+    "    motif = []\n",
+    "    for i in range(len(DNA[0])):\n",
+    "        motif.append(DNA[0][i:i+k])\n",
+    "    print motif\n",
+    "\n",
+    "k = 3\n",
+    "t = 5\n",
+    "DNA = [\"GGCGTTCAGGCA\",\"AAGAATCAGTCA\",\"CAAGGAGTTCGC\",\"CACGTCAATCAC\",\"CAATAATATTCG\"]\n",
+    "GreedyMotifSearch(DNA, k , t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA2E:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA2F:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA2G:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA2H: Implement DistanceBetweenPatternAndStrings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HammingDistance(seq1, seq2):\n",
+    "    difference = 0\n",
+    "    for ch1, ch2 in zip(seq1, seq2):\n",
+    "        if ch1 != ch2:\n",
+    "            difference += 1\n",
+    "    return difference\n",
+    "\n",
+    "def DistanceBetweenPatternAndStrings(Pattern, DNA):\n",
+    "    k = len(Pattern)\n",
+    "    distance = 0\n",
+    "    for text in DNA:\n",
+    "        hammingdistance = 999999999\n",
+    "        for i in range(len(text)-len(Pattern)+1):\n",
+    "            Pattern_ = text[i:i+len(Pattern)]\n",
+    "            if hammingdistance > HammingDistance(Pattern_,Pattern):\n",
+    "                hammingdistance = HammingDistance(Pattern_,Pattern)\n",
+    "        distance = distance + hammingdistance\n",
+    "    print distance\n",
+    "    \n",
+    "Pattern = \"AAA\"\n",
+    "DNA = [\"TTACCTTAAC\", \"GATATCTGTC\", \"ACGGCGTTCG\", \"CCCTAAAGAG\", \"CGTCAGAGGT\"]\n",
+    "DistanceBetweenPatternAndStrings(Pattern, DNA)"
    ]
   },
   {
