--- a/Chapter 2 Assignment.ipynb
+++ b/Chapter 2 Assignment.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BA2E:"
+    "BA2E: Implement GreedyMotifSearch with Pseudocounts"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BA2F:"
+    "BA2F: Implement RandomizedMotifSearch"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BA2G:"
+    "BA2G: Implement GibbsSampler"
    ]
   },
   {
@@ -304,15 +304,6 @@
     "DNA = [\"TTACCTTAAC\", \"GATATCTGTC\", \"ACGGCGTTCG\", \"CCCTAAAGAG\", \"CGTCAGAGGT\"]\n",
     "DistanceBetweenPatternAndStrings(Pattern, DNA)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
