আরো দুইটায় কাপঝাপ করসি

--- a/Chapter 3 Assignment.ipynb
+++ b/Chapter 3 Assignment.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Chapter 3"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA3A: Generate the k-mer Composition of a String"
    ]
@@ -18,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -49,7 +57,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA3B: Reconstruct a String from its Genome Path"
    ]
@@ -58,7 +69,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -85,7 +98,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA3C: Construct the Overlap Graph of a Collection of k-mers"
    ]
@@ -94,7 +110,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -128,7 +146,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA3D: Construct the De Bruijn Graph of a String"
    ]
@@ -137,7 +158,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -190,6 +213,158 @@
     "k = 4\n",
     "DNA = \"AAGATTCTCTAC\"\n",
     "DeBruijn(k, DNA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA3E: Construct the De Bruijn Graph of a Collection of k-mers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AGG-> GGG GGA  \n",
+      "CAG-> AGG  \n",
+      "GAG-> AGG  \n",
+      "GGA-> GAG  \n",
+      "GGG-> GGG GGA  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#হাল্কা কাপঝাঁপ আছে। পরে ঠিক করবো।\n",
+    "def DeBruijn(composition):\n",
+    "    composition.sort()\n",
+    "    prefix = []\n",
+    "    suffix = []\n",
+    "    for kmer in composition:\n",
+    "        prefix.append(kmer[0:len(kmer)-1])\n",
+    "        suffix.append(kmer[1:len(kmer)])\n",
+    "    uniqueprefix = []\n",
+    "    uniquesuffix = []\n",
+    "    for pre in prefix:\n",
+    "        if pre not in uniqueprefix:\n",
+    "            uniqueprefix.append(pre)\n",
+    "    for suf in suffix:\n",
+    "        if suf not in uniquesuffix:\n",
+    "            uniquesuffix.append(suf)\n",
+    "    debruijn = {}\n",
+    "    for node in uniqueprefix:\n",
+    "        print node + '->',\n",
+    "        count = 0\n",
+    "        for connectednode in uniquesuffix:\n",
+    "            if node[1:len(node)] == connectednode[0:len(node)-1]:\n",
+    "                print connectednode,\n",
+    "        print \" \"\n",
+    "\n",
+    "composition = [\"GAGG\",\"CAGG\",\"GGGG\",\"GGGA\",\"CAGG\",\"AGGG\",\"GGAG\"]\n",
+    "DeBruijn(composition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA3F: Find an Eulerian Cycle in a Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA3G: Find an Eulerian Path in a Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA3H: Reconstruct a String from its k-mer Composition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA3I: Find a k-Universal Circular String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('0', '0', '0', '0')\n",
+      "('0', '0', '0', '1')\n",
+      "('0', '0', '1', '0')\n",
+      "('0', '0', '1', '1')\n",
+      "('0', '1', '0', '0')\n",
+      "('0', '1', '0', '1')\n",
+      "('0', '1', '1', '0')\n",
+      "('0', '1', '1', '1')\n",
+      "('1', '0', '0', '0')\n",
+      "('1', '0', '0', '1')\n",
+      "('1', '0', '1', '0')\n",
+      "('1', '0', '1', '1')\n",
+      "('1', '1', '0', '0')\n",
+      "('1', '1', '0', '1')\n",
+      "('1', '1', '1', '0')\n",
+      "('1', '1', '1', '1')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#বিশাল কাপঝাঁপ আছে। পরে ট্রাই করা লাগবে\n",
+    "import itertools\n",
+    "def kUniversalCircularString(k):\n",
+    "    allcombinations = itertools.product(['0','1'],repeat=k)\n",
+    "    for i in allcombinations:\n",
+    "        print i\n",
+    "    \n",
+    "kUniversalCircularString(4)"
    ]
   }
  ],
