Greedy Motif Search Chapter 2

--- a/Chapter 2 Assignment.ipynb
+++ b/Chapter 2 Assignment.ipynb
@@ -179,40 +179,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['GGC', 'GCG', 'CGT', 'GTT', 'TTC', 'TCA', 'CAG', 'AGG', 'GGC', 'GCA', 'CA', 'A']\n"
+      "CAG\n",
+      "CAG\n",
+      "CAA\n",
+      "CAC\n",
+      "CAA\n"
      ]
     }
    ],
    "source": [
-    "#Incomplete\n",
-    "#Implementing http://www.mrgraeme.co.uk/greedy-motif-search/\n",
-    "def GreedyMotifSearch(DNA, k , t):\n",
-    "    bestMotifs = []\n",
+    "def Count(Motifs):\n",
+    "    count = {}\n",
+    "    k = len(Motifs[0])\n",
+    "    for symbol in \"ACGT\":\n",
+    "        count[symbol] = []\n",
+    "        for j in range(k):\n",
+    "            count[symbol].append(0) \n",
+    "    t = len(Motifs)\n",
     "    for i in range(t):\n",
-    "        bestMotifs.append(DNA[i][0:k])\n",
-    "    motif = []\n",
-    "    for i in range(len(DNA[0])):\n",
-    "        motif.append(DNA[0][i:i+k])\n",
-    "    print motif\n",
+    "        for j in range(k):\n",
+    "            symbol = Motifs[i][j]\n",
+    "            count[symbol][j] += 1\n",
+    " \n",
+    "    return count\n",
+    "\n",
+    "def Profile(Motifs):\n",
+    "    t = len(Motifs)\n",
+    "    k = len(Motifs[0])\n",
+    "    profile = {}\n",
+    "    profile = Count(Motifs)\n",
+    "    stringList = profile.values() \n",
+    "    for string in stringList:\n",
+    "        for i in range(len(string)):\n",
+    "            string[i] = string[i] / t\n",
+    "    return profile\n",
+    "\n",
+    "def Consensus(Motifs):\n",
+    "    k = len(Motifs[0])\n",
+    "    count = Count(Motifs) \n",
+    "    consensus = \"\"\n",
+    "    for j in range(k):\n",
+    "        m = 0\n",
+    "        frequentSymbol = \"\"\n",
+    "        for symbol in \"ACGT\":\n",
+    "            if count[symbol][j] > m:\n",
+    "                m = count[symbol][j]\n",
+    "                frequentSymbol = symbol\n",
+    "        consensus += frequentSymbol\n",
+    "    return consensus\n",
+    "\n",
+    "def Score(Motifs):\n",
+    "    t = len(Motifs)\n",
+    "    k = len(Motifs[0])\n",
+    "    consensus = Consensus(Motifs)\n",
+    "    score = 0\n",
+    "    for j in range(k):\n",
+    "        for i in range(t):\n",
+    "            symbol = Motifs[i][j]\n",
+    "            if consensus[j] != symbol:\n",
+    "                score += 1 \n",
+    "    return score\n",
+    "\n",
+    "def Pr(Text, Profile):\n",
+    "    k = len(Text)\n",
+    "    pr = 1.0\n",
+    "    for j in range(k):\n",
+    "        symbol = Text[j]\n",
+    "        prList = Profile[symbol]\n",
+    "        pr *= prList[j]\n",
+    "    return pr\n",
+    " \n",
+    "def ProfileMostProbablePattern(Text, k, Profile):\n",
+    "    l = len(Text)\n",
+    "    pr_most = 0.0\n",
+    "    mostProbablePattern = Text[0:k]\n",
+    "    for j in range(l-k+1):\n",
+    "        k_mer = Text[j:j+k]\n",
+    "        pr = Pr(k_mer, Profile)\n",
+    "        if pr > pr_most:\n",
+    "            pr_most = pr\n",
+    "            mostProbablePattern = k_mer\n",
+    "    return mostProbablePattern    \n",
+    "\n",
+    "def GreedyMotifSearch(Dna, k, t):\n",
+    "    BestMotifs = []\n",
+    "    for i in range(0, t):\n",
+    "        BestMotifs.append(Dna[i][0:k])\n",
+    "    n = len(Dna[0])\n",
+    "    for i in range(n-k+1):\n",
+    "        Motifs = []\n",
+    "        Motifs.append(Dna[0][i:i+k])\n",
+    "        for j in range(1, t):\n",
+    "            P = Profile(Motifs[0:j])\n",
+    "            Motifs.append(ProfileMostProbablePattern(Dna[j], k, P))       \n",
+    "        if Score(Motifs) < Score(BestMotifs):\n",
+    "            BestMotifs = Motifs\n",
+    "    return BestMotifs\n",
     "\n",
     "k = 3\n",
-    "t = 5\n",
-    "DNA = [\"GGCGTTCAGGCA\",\"AAGAATCAGTCA\",\"CAAGGAGTTCGC\",\"CACGTCAATCAC\",\"CAATAATATTCG\"]\n",
-    "GreedyMotifSearch(DNA, k , t)"
+    "t = 5 \n",
+    "DNA1 = \"GGCGTTCAGGCA\"\n",
+    "DNA2 = \"AAGAATCAGTCA\"\n",
+    "DNA3 = \"CAAGGAGTTCGC\"\n",
+    "DNA4 = \"CACGTCAATCAC\"\n",
+    "DNA5 = \"CAATAATATTCG\"\n",
+    "Dna = [ DNA1, DNA2, DNA3, DNA4, DNA5 ]\n",
+    "print('\\n'.join(GreedyMotifSearch(Dna,k,t)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2E: Implement GreedyMotifSearch with Pseudocounts"
    ]
@@ -221,14 +312,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2F: Implement RandomizedMotifSearch"
    ]
@@ -237,14 +333,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2G: Implement GibbsSampler"
    ]
@@ -253,14 +354,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA2H: Implement DistanceBetweenPatternAndStrings"
    ]
@@ -269,7 +375,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
